# ddp

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  run.bat
.opencode/skills/ddp-backend/: SKILL.md
app/: admin.py  auth.py  db.py  executor.py  gpu.py  images.py  k8s_executor.py  main.py  storage.py  timecheck.py
ddp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docker/ddp-runner/: Dockerfile  runner.py
docker/images/: Dockerfile.cuda  Dockerfile.pytorch  entry.sh  nvidia-smi
docker/server/: Dockerfile
docs/superpowers/plans/: 2026-07-15-admin-functionality.md  2026-07-20-recurring-jobs.md
docs/superpowers/specs/: 2026-07-15-admin-functionality-design.md  2026-07-20-recurring-jobs-design.md
frontend/: index.html  index.reference.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts  style.css
sample_project/: main.py
tests/: conftest.py  test_admin.py  test_api.py  test_auth.py  test_db.py  test_host_mounts.py  test_s3.py  test_timecheck.py
